--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .navbar__s2 input {
     border: none;
     width: 100%;
-background-color: transparent;
+    background-color: transparent;
 
 }
 
@@ -52,121 +52,170 @@ background-color: transparent;
     gap: 10px;
     align-items: center;
 }
-.mylearning{
-position: relative;
-cursor: pointer;
+
+.mylearning {
+    position: relative;
+    cursor: pointer;
 }
-.mylearning__popup{
-position: absolute;
-background-color: white;
-border: solid blacck 2px;
-width: 100px;
-top: 150%;
-padding: 20px;
-right: 0;
-display: none;
+
+.mylearning__popup {
+    position: absolute;
+    background-color: white;
+    border: solid blacck 2px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
 
 }
-.mylearning:hover .mylearning__popup{
+
+.mylearning:hover .mylearning__popup {
     display: block;
 
 }
-.catagories{
+
+.catagories {
     display: flex;
     padding: 10px;
     border-bottom: solid black 1px;
     justify-content: space-around;
 
 }
-.catagories p{
+
+.catagories p {
     background-color: #A435f0;
     color: white;
     padding: 10px;
-    border: radius 30px;
+    border-radius:  30px;
+    cursor: pointer;
+    border: solid #A435f0 1px;
+}
+
+.catagories p:hover {
+    transition-duration: 2s;
+    background-color: transparent;
+    color: black;
+    border: solid #A435f0 1px;
 
 }
-.sale-image{
-    position: relative;
-}
-.sale-image img{
-    width: 100%;
+
+    .sale-image {
+        position: relative;
     }
-.sale-image__offer{
-    width: 35%;
-    border: solid black 2px;
-    background-color: white;
-    position: absolute;
-    padding: 2%;
-    top: 10%;
-    left: 10%;
-}
-.recommended{
-    padding: 10px;
-}
-.recommended__container {
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
-margin-top: 10px;
-}
-.course-card {
-    width: 300px;
-}
-.course-card img{
-    height: 50%;
-    width: 100%;
-}
-.topics{
-    padding: 10px;
 
-}
-.topics__container{
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-    flex-wrap: wrap;
-}
-.topics__container p{
-    border: solid grey 1px;
-    padding: 10px;
-    flex-grow: 1;
-    flex-basis: 25%;
-}
-.popular{
-    padding: 10px;
+    .sale-image img {
+        width: 100%;
+    }
 
-}
-.popular__container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 10px;
-}
-.footer{
-    padding: 30px;
-    background-color: black;
-    color: antiquewhite;
-}
-.footer__one{
-    display: flex;
-    gap: 10px;
-    color: white;
-}
-.footer__one p{
-    margin: 20px;
-    color: white;
-}
-.footer__two{
-    display: flex;
-    margin: 20px;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
+    .sale-image__offer {
+        width: 35%;
+        border: solid black 2px;
+        background-color: white;
+        position: absolute;
+        padding: 2%;
+        top: 10%;
+        left: 10%;
+        animation-name: Zoom;
+        animation-duration: 2s;
+        opacity: 0;
+        animation-fill-mode: forwards;
 
-}
-.footer__two h1{
-    color: white;
-}
-.footer__two p{
-    color: white;
-}
+    }
+
+    @keyframes Zoom {
+        0% {
+            opacity: 0;
+            transform: scale(0)
+        }
+
+        100% {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+
+    .recommended {
+        padding: 10px;
+    }
+
+    .recommended__container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 10px;
+    }
+
+    .course-card {
+        width: 300px;
+    }
+
+    .course-card img {
+        height: 50%;
+        width: 100%;
+    }
+
+    .topics {
+        padding: 10px;
+
+    }
+
+    .topics__container {
+        display: flex;
+        gap: 10px;
+        margin-top: 10px;
+        flex-wrap: wrap;
+    }
+
+    .topics__container p {
+        border: solid grey 1px;
+        padding: 10px;
+        flex-grow: 1;
+        flex-basis: 25%;
+    }
+
+    .popular {
+        padding: 10px;
+
+    }
+
+    .popular__container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 10px;
+    }
+
+    .footer {
+        padding: 30px;
+        background-color: black;
+        color: antiquewhite;
+    }
+
+    .footer__one {
+        display: flex;
+        gap: 10px;
+        color: white;
+    }
+
+    .footer__one p {
+        margin: 20px;
+        color: white;
+    }
+
+    .footer__two {
+        display: flex;
+        margin: 20px;
+        align-items: center;
+        justify-content: space-between;
+        color: white;
+
+    }
+
+    .footer__two h1 {
+        color: white;
+    }
+
+    .footer__two p {
+        color: white;
+    }
