--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ body {
     gap: 10px;
     align-items: center;
 }
+.navbar__s4{
+    display: none;
+}
 
 .mylearning {
     position: relative;
@@ -145,7 +148,9 @@ body {
 }
 
 .course-card {
-    width: 300px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .course-card img {
@@ -216,4 +221,25 @@ body {
 
 .footer__two p {
     color: white;
+}
+
+/* Media Queries*/
+@media screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+    }
+}
+@media screen and (max-width:600px) {
+    .course-card{
+       flex-basis: 40%;
+}
+.catagories{
+    display: none;
+}
+.navbar__s2,.navbar__s3{
+    display: none;
+}
+.navbar__s4{
+    display: block;
+}
 }
